<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.univali.calculadorademeediasunivali.MainActivity"
    tools:showIn="@layout/activity_main"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <EditText
        android:id="@+id/editTextPr1M3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:text="@string/NotaBase"
        android:textSize="15sp"
        app:layout_constraintLeft_toRightOf="@+id/textViewPr1M3"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="29dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextPr1M2" />

    <TextView
        android:id="@+id/textViewPr1M3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/P1"
        android:textSize="15sp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="61dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewPr1M2" />

    <EditText
        android:id="@+id/editTextPr2M3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:text="@string/NotaBase"
        android:textSize="15sp"
        app:layout_constraintLeft_toRightOf="@+id/textViewPr2M3"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="29dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextPr2M2" />

    <TextView
        android:id="@+id/textViewM3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="61dp"
        android:text="@string/M3"
        android:textSize="15sp"
        app:layout_constraintLeft_toRightOf="@+id/editTextPr2M3"
        app:layout_constraintTop_toBottomOf="@+id/textViewM2" />

    <TextView
        android:id="@+id/textViewPr2M3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/P2"
        android:textSize="15sp"
        app:layout_constraintLeft_toRightOf="@+id/editTextPr1M3"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="61dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewPr2M2" />

    <TextView
        android:id="@+id/TextViewM3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="29dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:text="@string/NotaBase"
        android:textSize="15sp"
        tools:layout_editor_absoluteY="170dp"
        app:layout_constraintLeft_toRightOf="@+id/textViewM3"
         />

    <EditText
        android:id="@+id/editTextPr1M2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:text="@string/NotaBase"
        android:textSize="15sp"
        app:layout_constraintLeft_toRightOf="@+id/textViewPr1M2"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextPr1M1" />

    <TextView
        android:id="@+id/textViewPr1M2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="61dp"
        android:text="@string/P1"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPr1M1" />

    <EditText
        android:id="@+id/editTextPr2M2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:text="@string/NotaBase"
        android:textSize="15sp"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextPr2M1"
        app:layout_constraintLeft_toRightOf="@+id/textViewPr2M2"
        android:layout_marginLeft="15dp" />

    <TextView
        android:id="@+id/textViewM2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/M2"
        android:textSize="15sp"
        app:layout_constraintLeft_toRightOf="@+id/editTextPr2M2"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="61dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewM1" />

    <TextView
        android:id="@+id/textViewPr2M2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/P2"
        android:textSize="15sp"
        app:layout_constraintLeft_toRightOf="@+id/editTextPr1M2"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="62dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewPr2M1" />

    <TextView
        android:id="@+id/TextViewM2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:text="@string/NotaBase"
        android:textSize="15sp"
        tools:layout_editor_absoluteY="88dp"
        app:layout_constraintLeft_toRightOf="@+id/textViewM2"
         />

    <EditText
        android:id="@+id/editTextPr1M1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/NotaBase"
        android:textSize="15sp"
        android:gravity="center"
        tools:layout_editor_absoluteY="10dp"
        app:layout_constraintLeft_toRightOf="@+id/textViewPr1M1"
        android:layout_marginLeft="21dp" />

    <EditText
        android:id="@+id/editTextPr2M1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/NotaBase"
        android:textSize="15sp"
        android:gravity="center"
        tools:layout_editor_absoluteY="10dp"
        app:layout_constraintLeft_toRightOf="@+id/textViewPr2M1"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/TextViewM1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/NotaBase"
        android:textSize="15sp"
        android:gravity="center"
        tools:layout_editor_absoluteY="10dp"
        app:layout_constraintLeft_toRightOf="@+id/textViewM1"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/textViewPr1M1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/P1"
        android:textSize="15sp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineHC"
        android:layout_marginTop="25dp" />

    <TextView
        android:id="@+id/textViewPr2M1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Prova 2"
        android:textSize="15sp"
        app:layout_constraintLeft_toRightOf="@+id/editTextPr1M1"
        android:layout_marginLeft="12dp"
        app:layout_constraintTop_toTopOf="@+id/guidelineHC"
        android:layout_marginTop="24dp" />

    <TextView
        android:id="@+id/textViewM1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/M1"
        android:textSize="15sp"
        app:layout_constraintLeft_toRightOf="@+id/editTextPr2M1"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toTopOf="@+id/guidelineHC"
        android:layout_marginTop="25dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guidelineVE"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="368dp"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="16dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guidelineHC"
        app:layout_constraintGuide_begin="0dp"
        android:orientation="horizontal" />




</android.support.constraint.ConstraintLayout>
